--- a/config/config.ini
+++ b/config/config.ini
@@ -1,11 +1,11 @@
 [HTTP]
 scheme = http
-baseurl = http://lemondream.chumanapp.com
+baseurl = http://api-demo.lemondream.cn
 #http://api.lemondream.cn
 #http://139.9.213.120
 
 [PATH]
-path = E:\test_python\python\testcase\
+path = E:\python\testcase\
 
 [EMAIL]
 smtpserver = smtp.163.com
