--- a/config/config.ini
+++ b/config/config.ini
@@ -5,7 +5,7 @@ baseurl = http://api-demo.lemondream.cn
 #http://139.9.213.120
 
 [PATH]
-path = E:\python\testcase\
+path = E:\test_python\testcase\
 
 [EMAIL]
 smtpserver = smtp.163.com
