--- a/config/config.ini
+++ b/config/config.ini
@@ -2,10 +2,10 @@
 scheme = http
 baseurl = http://lemondream.chumanapp.com
 #http://api.lemondream.cn
-#http://139.9.213.120
+#http://lemondream.chumanapp.com
 
 [PATH]
-path = E:\python\testcase\
+path = E:\test_python\testcase\
 
 [EMAIL]
 smtpserver = smtp.163.com
