--- a/config/config.ini
+++ b/config/config.ini
@@ -1,11 +1,13 @@
 [HTTP]
 scheme = http
 baseurl = http://lemondream.chumanapp.com
+versionCode = android_1.6.0
 #http://api.lemondream.cn
 #http://lemondream.chumanapp.com
 
 [PATH]
-path = E:\test_python\testcase\
+path = E:\python\testcase\
+#path = E:\test_python\testcase\
 
 [EMAIL]
 smtpserver = smtp.163.com
