--- a/config/config.ini
+++ b/config/config.ini
@@ -6,8 +6,8 @@ versionCode = android_1.6.0
 #http://lemondream.chumanapp.com
 
 [PATH]
-path = E:\python\testcase\
-#path = E:\test_python\testcase\
+#path = E:\python\testcase\
+path = E:\test_python\testcase\
 
 [EMAIL]
 smtpserver = smtp.163.com
