--- a/config/config.ini
+++ b/config/config.ini
@@ -13,4 +13,4 @@ path = E:\python\testcase\
 smtpserver = smtp.163.com
 subject = 接口自动化测试报告
 username = sml912041511@163.com
-address = 912041511@qq.com
+address = sumeilan@dreampix.cn
