--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 [HTTP]
 scheme = http
-baseurl = http://lemondream.chumanapp.com
-versionCode = android_1.7.0
+baseurl = http://api-api2.lemondream.cn
+versionCode = android_1.8.0
 #http://api.lemondream.cn
 #http://lemondream.chumanapp.com
 #http://api-api2.lemondream.cn
