--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [HTTP]
 scheme = http
-baseurl = http://api-api2.lemondream.cn
+baseurl = http://lemondream.chumanapp.com
 versionCode = android_1.8.0
 #http://api.lemondream.cn
 #http://lemondream.chumanapp.com
