--- a/config/config.ini
+++ b/config/config.ini
@@ -12,6 +12,6 @@ path = E:\python\testcase\
 
 [EMAIL]
 smtpserver = smtp.163.com
-subject = 接口自动化测试报告
+subject = lemon 接口测试报告
 username = sml912041511@163.com
 address = sumeilan@dreampix.cn
