--- a/config/config.ini
+++ b/config/config.ini
@@ -1,17 +1,20 @@
 [HTTP]
 scheme = http
-baseurl = http://lemondream.chumanapp.com
-versionCode = android_1.9.0
-#http://api.lemondream.cn
-#http://lemondream.chumanapp.com
-#http://api-api2.lemondream.cn
+baseurl = http://api2.lemondream.cn
+versioncode = android_1.9.0
 
 [PATH]
 path = E:\python\testcase\
-#path = E:\test_python\testcase\
 
 [EMAIL]
 smtpserver = smtp.163.com
-subject = lemon 接口测试报告
+tpserver = smtp.163.com
+subject = lemona接口测试
+username = sml912041511@163.com
+address = sumeilan@dreampix.cn
+
+[MAIL]
+smtpserver = smtp.163.com
+subject = lemon
 username = sml912041511@163.com
 address = sumeilan@dreampix.cn
