--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [HTTP]
 scheme = http
-baseurl = http://api2.lemondream.cn
+baseurl = http://lemondream.chumanapp.com
 versioncode = android_1.9.0
 
 [PATH]
@@ -18,3 +18,4 @@ smtpserver = smtp.163.com
 subject = lemon
 username = sml912041511@163.com
 address = sumeilan@dreampix.cn
+
