--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [HTTP]
 scheme = http
-baseurl = http://api-api2.lemondream.cn
+baseurl = http://api.lemondream.cn
 versioncode = android_1.9.0
 
 [PATH]
@@ -18,6 +18,3 @@ smtpserver = smtp.163.com
 subject = lemon
 username = sml912041511@163.com
 address = sumeilan@dreampix.cn
-
-
-
