--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [HTTP]
 scheme = http
-baseurl = http://api.lemondream.cn
+baseurl = http://lemondream.chumanapp.com
 versioncode = android_1.9.0
 
 [PATH]
