--- a/config/config.ini
+++ b/config/config.ini
@@ -1,8 +1,3 @@
-[HTTP]
-scheme = http
-baseurl = http://lemondream.chumanapp.com
-versioncode = android_1.9.0
-
 [PATH]
 path = E:\python\testcase\
 
@@ -19,4 +14,7 @@ subject = lemon
 username = sml912041511@163.com
 address = sumeilan@dreampix.cn
 
-
+[HTTP]
+scheme = http
+baseurl = http://api-api2.lemondream.cn/
+versioncode = android_1.9.1
