--- a/config/config.ini
+++ b/config/config.ini
@@ -16,5 +16,5 @@ address = sumeilan@dreampix.cn
 
 [HTTP]
 scheme = http
-baseurl = http://api-api2.lemondream.cn/
+baseurl = http://lemondream.chumanapp.com
 versioncode = android_1.9.1
