--- a/config/config.ini
+++ b/config/config.ini
@@ -16,6 +16,6 @@ address = sumeilan@dreampix.cn
 
 [HTTP]
 scheme = http
-baseurl = http://lemondream.chumanapp.com
-versioncode = android_1.9.2
+baseurl = http://api-api2.lemondream.cn
+versioncode = android_1.9.3
 
