--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 [PATH]
-path = E:\python\testcase\
+path = E:\test_python\testcase\
 
 [EMAIL]
 smtpserver = smtp.163.com
@@ -16,6 +16,6 @@ address = sumeilan@dreampix.cn
 
 [HTTP]
 scheme = http
-baseurl = http://api-api2.lemondream.cn
-versioncode = android_2.2.0
+baseurl = http://api-demo.lemondream.cn
+versioncode = android_2.3.0
 
